--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>E-Commerce app</title>
+    <!-- ABCL IT stands for Any Body Can Learn -->
+    <title>ABCL IT E-Commerce</title>
 </head>
 
 <body>
